@@ -198,6 +198,8 @@ extern ctf_id_t ctf_add_volatile(ctf_file_t *, uint_t, ctf_id_t);
 
 extern int ctf_add_enumerator(ctf_file_t *, ctf_id_t, const char *, int);
 extern int ctf_add_member(ctf_file_t *, ctf_id_t, const char *, ctf_id_t);
+extern int ctf_add_member_offset(ctf_file_t *, ctf_id_t, const char *,
+    ctf_id_t, ulong_t);
 
 extern int ctf_set_array(ctf_file_t *, ctf_id_t, const ctf_arinfo_t *);
 
